arrange backend functions

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,8 +9,8 @@
     <body>
          <div>
         cytomod_server:
-        <a href="{{ url_for('welcome') }}">Home</a>
-        <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ 'set.html' }}">set</a>
+        <a href="{{ 'upload.html' }}">upload</a>
     </div>
         <hr>
         {% with messages = get_flashed_messages() %}
