--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,9 +1,9 @@
-<html>
-   <body>
+{% extends "base.html" %}
+
+{% block content %}
       <form action = "http://localhost:5000/uploader" method = "POST"
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
       </form>
-   </body>
-</html>
+{% endblock %}
