--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <title>Upload Files</title>
-    <h1>Upload new File</h1>
-    <p>Please upload 2 excel files:
-        one for the cytokins row data and the other one for the patients data
+    <h1 style="color: #5e9ca0;">Upload your data</h1>
+    <p style="color: #2e6c80;">Please upload 2 excel files:
+        one for the cytokins raw data and the other one for the patients data
     </p>
     <form method=post enctype=multipart/form-data>
          <input type = "file" name = "file" />
