--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ user.username }}! Welcome to the CytoMod webserver!</h1>
-    {% for post in posts %}
-    <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-    {% endfor %}
+    <h1><span style="color: #0FA6AB;">Welcome to Cytomod</span></h1>
+    <form action="/upload" method="get">
+    <p style="color: #0B7478">the website is based on an article found <a href="https://www.frontiersin.org/articles/10.3389/fimmu.2019.01338/">here</a></p>
+    <p> to continue please press the button</p><br>
+      <input type="submit" name="value" value="continue">
+      <br>
+</form>
 {% endblock %}
