--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -12,7 +12,10 @@
             {% for var in results %}
                 <tr>
                     <td style="color: #0B7478"><span style= "font-size: 16pt;"> Image: {{var['headline']}}</span></td>
-                    <td><img src="{{ var['path'] }}" width="700" height=var['height'] ></td>
+                    <td><a download="{{ var['name'] }}" href= "{{ var['path'] }}" title="Image: {{var['headline']}}">
+                    <img src="{{ var['path'] }}" width=" {{var['width']}}" height=" {{var['height']}}" >
+                    </a></td>
+                    <td style="color: #0B7478"><span style= "font-size: 16pt;"> Click the image ! You can download!</span></td>
                 </tr>
             {% endfor %}
             </tbody>
