--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,8 +34,12 @@
     </head>
     <body>
          <div>
-        upload data:
-        <a href="{{ 'upload.html' }}">upload</a>
+        Upload data:
+        <a href="{{ 'upload.html' }}">Upload</a>
+        The Method:
+        <a href="{{ 'explanation.html' }}">Explanation</a>
+        Set parameters:
+        <a href="{{ 'set.html' }}">Set</a>
     </div>
         <hr>
         {% with messages = get_flashed_messages() %}
