--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -4,6 +4,10 @@
 
     <h1>Settings</h1>
     <form action="/generate" method="post">
+         <h3 style="color: #5e9ca0;">Luminex</h3><br>
+        <p style="color: #0B7478">please mark the box if your cytokines measurments data is a Luminex Excel</p>
+      <input type="checkbox" name="luminx" checked="True">
+      <br>
         <h3 style="color: #5e9ca0;">name_data</h3><br>
         <p style="color: #0B7478">Insert the name of the data/chort</p>
       <input type="text" name="name_data" placeholder="name">
