--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -7,8 +7,8 @@
         one for the cytokins raw data and the other one for the patients data
     </p>
     <form method=post enctype=multipart/form-data>
-         <input type = "file" name = "file" />
-          <input type = "file" name = "file" />
+         <input type = "file" name = "file1" />
+          <input type = "file" name = "file2" />
          <input type = "submit" value="Upload"/>
       </form>
 {% endblock %}
