added luminex functionality

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -7,8 +7,10 @@
         one for the cytokins raw data and the other one for the patients data
     </p>
     <form method=post enctype=multipart/form-data>
-         <input type = "file" name = "file1" />
-          <input type = "file" name = "file2" />
+         <p style="color: #2e6c80;">Cytokines data: </p>
+         <input type = "file" name = "cytokines" />
+         <p style="color: #2e6c80;">Patients data: </p>
+          <input type = "file" name = "patients" />
          <input type = "submit" value="Upload"/>
       </form>
-{% endblock %}
+{% endblock %}cy
