--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,12 +3,44 @@
 <head>
 <meta charset="UTF-8">
 <title>Results</title>
+<script>
+function exportTableToExcel(tableID, filename = ''){
+    var downloadLink;
+    var dataType = 'application/vnd.ms-excel';
+    var tableSelect = document.getElementById(tableID);
+    var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
+
+    // Specify file name
+    filename = filename?filename+'.xls':'excel_data.xls';
+
+    // Create download link element
+    downloadLink = document.createElement("a");
+
+    document.body.appendChild(downloadLink);
+
+    if(navigator.msSaveOrOpenBlob){
+        var blob = new Blob(['\ufeff', tableHTML], {
+            type: dataType
+        });
+        navigator.msSaveOrOpenBlob( blob, filename);
+    }else{
+        // Create a link to the file
+        downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
+
+        // Setting the file name
+        downloadLink.download = filename;
+
+        //triggering the function
+        downloadLink.click();
+    }
+}
+</script>
 </head>
 <body>
     <h1 style="color: #5e9ca0;">Modules</h1>
     <h2 style="color: #0B7478">The created modules are:</h2>
-    <h3 style="color: #0B7478">{{abs_modules['headline']}}</h3>
-        <table>
+    <h3 style="color: #0B7478">{{abs_modules['headline']}}</a></h3>
+        <table id="tblDataAbs">
             <tbody>
                   {% for module in abs_len %}
                     <tr>
@@ -22,8 +54,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <button onclick="exportTableToExcel('tblDataAbs', 'abs modules')">Export Absolute Modules To Excel File</button>
        <h3 style="color: #0B7478">{{adj_modules['headline']}}</h3>
-        <table>
+        <table id="tblDataAdj">
             <tbody>
                   {% for module in adj_len %}
                     <tr>
@@ -37,6 +70,7 @@
                 {% endfor %}
             </tbody>
         </table>
+    <button onclick="exportTableToExcel('tblDataAdj', 'adj modules')">Export Adjusted Modules To Excel File</button>
     {% if results %}
     <h1 style="color: #5e9ca0;">Figures</h1>
     <h2 style="color: #0B7478">For download a figure, click on it!</h2>
