--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -4,51 +4,44 @@
 
     <h1>Settings</h1>
     <form action="/generate" method="post">
-         <h3 style="color: #5e9ca0;">Luminex</h3><br>
-        <p style="color: #0B7478">please mark the box if your cytokines measurments data is a Luminex Excel</p>
-      <input type="checkbox" name="luminx" checked="True">
-      <br>
-        <h3 style="color: #5e9ca0;">name_data</h3><br>
+        <h3 style="color: #5e9ca0;">name_data</h3>
         <p style="color: #0B7478">Insert the name of the data/chort</p>
       <input type="text" name="name_data" placeholder="name">
-      <br>
-        <h3 style="color: #5e9ca0;">name_compartment</h3><br>
+        <h3 style="color: #5e9ca0;">name_compartment</h3>
          <p style="color: #0B7478">Insert the name of compartment from which cytokines were extracted, e.g., serum (for writing files)</p>
-      <input type="text" name="name_compartment" placeholder="Plasma">
-      <br>
-        <h3 style="color: #5e9ca0;">log_transform</h3><br>
+      <input type="text" name="name_compartment" placeholder="Plasma, BS, Nasal">
+         <h3 style="color: #5e9ca0;">Luminex</h3>
+        <p style="color: #0B7478">Mark this if your file is a luminex measurements file. Note - if you are using luminex directly, please make sure all value are specific.
+            if a value is mentioned as > or < - please change it to a chosen real number </p>
+      <input type="checkbox" name="luminex" checked="True">
+        <h3 style="color: #5e9ca0;">log_transform</h3>
         <p style="color: #0B7478">Marking this will generate log transformation on the cytokine data</p>
       <input type="checkbox" name="log_transform" checked="True">
-        <h3 style="color: #5e9ca0;">max_final_k</h3><br>
-         <p style="color: #0B7478">max modules size - the maximal number of clusters that can be chosen. must be smaller then "max_testing_k"</p>
+        <h3 style="color: #5e9ca0;">max_testing_k</h3>
+         <p style="color: #0B7478">max modules size - the maximal number of clusters that can be chosen.</p>
       <input type="number" name="max_testing_k" placeholder="6">
-      <br>
-        <h3 style="color: #5e9ca0;">outcomes</h3><br>
+        <h3 style="color: #5e9ca0;">Outcomes</h3>
          <p style="color: #0B7478">Optional. Names of outcome variables from the patients_data.xlsx data-frame to be analyzed.
        If list is left empty, will not perform the associations to outcomes analysis.
         To insert more then one column, please split the column names with ", " (i.e - outcome1, outcome2, ..., outcomeN)
        Note - we currently supports binary outcome variables only, by using logistic regression</p>
       <input type="text" name="outcomes" placeholder="outcome variables" >
-      <br>
-        <h3 style="color: #5e9ca0;">covariates</h3><br>
+        <h3 style="color: #5e9ca0;">covariates</h3>
         <p style="color: #0B7478">Optional. Names of covariate variables (columns) from the patients_data.xlsx data-frame
        to be controlled for in the regression models. If list is left empty (i.e., []),
        will not controll the associations to outcomes analysis with any covariate variables</p>
       <input type="text" name="covariates" placeholder="Age">
-      <br>
-        <h3 style="color: #5e9ca0;">log_column_names</h3><br>
+        <h3 style="color: #5e9ca0;">log_column_names</h3>
         <p style="color: #0B7478">List with names of covariate columns to be log-transformed, only if args.log_transform = True.
         If there are no columns you wish to transform, leave empty </p>
       <input type="text" name="log_column_names" placeholder="Age">
-      <br>
-        <h3 style="color: #5e9ca0;">cytokines</h3><br>
+        <h3 style="color: #5e9ca0;">cytokines</h3>
         <p style="color: #0B7478">List of cytokines to be analyzed. If None, will analyze all cytokines in the cytokine_data file</p>
       <input type="text" name="cytokines">
-      <br>
 <!--     <h3 style="color: #5e9ca0;">save_file</h3><br>-->
 <!--        <p style="color: #0B7478">Whether you agree us to keep your data saved in our database</p>-->
 <!--      <input type="checkbox" name="save_file" checked=True></br>-->
-    </br>
+        <br>
       <input type="submit" value="Submit" onclick="loading();">
     </form>
     <p>Clicking the "Submit" button, will start the analysis</p>
@@ -57,3 +50,5 @@
 {% endblock %}
 
 
+<!--  <label for="username">Username: </label>-->
+  <!--<input type="text" id="username" name="username"><br>-->
